--- a/index.html
+++ b/index.html
@@ -50,30 +50,174 @@
             </div>
             <div class="header__slider">
                 <div class="header__slider-description">
-                    <p class="header__slider-description__heading">Cómo afecta la salud 
+                    <p class="header__slider-description__heading block-heading">Cómo afecta la salud 
                         del hígado a tu bienestar</p>
-                    <p class="header__slider-description__paragraph">Alguna vez te has preguntado si la fatiga constante, los problemas 
+                    <p class="header__slider-description__paragraph block-paragraph">Alguna vez te has preguntado si la fatiga constante, los problemas 
                         digestivos, cutáneos y de inmunidad están relacionados con tu hígado? 
                         El hígado desempeña un papel clave en tu bienestar general, y su salud 
-                        es crucial para una vida de calidad. 
+                        es crucial para una vida de calidad.<br> 
                         Los problemas hepáticos incluyen los siguientes síntomas:</p>
                 </div>
             </div>
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            <div class="reasons">
-                <div class="reasons__description">
-                    <p class="reason__description-heading">Qué destruye tu hígado? 
-                        Descubre las causas principales!</p>
-                    <p class="reason__description-text">Te sorprenderá saber cuánto pueden dañar la salud de tu hígado los hábitos cotidianos. 
-                        A menudo no pensamos en cómo la comida que ingerimos, las bebidas que tomamos 
-                        e incluso nuestro estilo de vida pueden perjudicar en secreto a este órgano vital. 
-                        Descubramos las verdaderas causas detrás de los problemas hepáticos</p>
+        <div class="reasons">
+            <div class="container">
+                <div class="reasons__wrapper">
+                    <div class="reasons__description">
+                        <p class="reason__description-heading block-heading">Qué destruye tu hígado? 
+                            Descubre las causas principales!</p>
+                        <p class="reason__description-text block-paragraph">Te sorprenderá saber cuánto pueden dañar la salud de tu hígado los hábitos cotidianos.  
+                            A menudo no pensamos en cómo la comida que ingerimos, las bebidas que tomamos 
+                            e incluso nuestro estilo de vida pueden perjudicar en secreto a este órgano vital. 
+                            Descubramos las verdaderas causas detrás de los problemas hepáticos</p>
+                    </div>
+                    <div class="reasons__list-wrapper">
+                        <ul class="reasons__list">
+                            <li class="reasons__list-item">
+                                <img src="./img/icons/reasons/fast-food-burger-svgrepo-com.svg" alt="fast food">
+                                <p class="reasons__list-item__heading">Alimentación inadecuada</p>
+                                <p class="reasons__list-item__description">Los alimentos grasos, fritos y el exceso 
+                                    de azúcar sobrecargan y dañan el hígado</p>
+                            </li>
+                            <li class="reasons__list-item">
+                                <img src="./img/icons/reasons/alcohol-14-svgrepo-com.svg" alt="alcohol">
+                                <p class="reasons__list-item__heading">Alcohol</p>
+                                <p class="reasons__list-item__description">El consumo regular de alcohol destruye 
+                                    las células hepáticas y conduce 
+                                    a enfermedades del hígado</p>
+                            </li>
+                            <li class="reasons__list-item">
+                                <img src="./img/icons/reasons/medicine-svgrepo-com (1).svg" alt="medicaments">
+                                <p class="reasons__list-item__heading">Medicamentos y 
+                                    productos químicos</p>
+                                <p class="reasons__list-item__description">La ingesta prolongada de medicamentos 
+                                    y sustancias tóxicas daña las células 
+                                    hepáticas</p>
+                            </li>
+                            <li class="reasons__list-item">
+                                <img src="./img/icons/reasons/virus-svgrepo-com.svg" alt="virus">
+                                <p class="reasons__list-item__heading">Infecciones virales</p>
+                                <p class="reasons__list-item__description">Las hepatitis y otras infecciones virales 
+                                    causan inflamación y enfermedades 
+                                    crónicas del hígado</p>
+                            </li>
+                            <li class="reasons__list-item">
+                                <img src="./img/icons/reasons/sofa-svgrepo-com.svg" alt="fast food">
+                                <p class="reasons__list-item__heading">Vida sedentaria</p>
+                                <p class="reasons__list-item__description">La falta de actividad física y el exceso de 
+                                    peso deterioran la salud del hígado</p>
+                            </li>
+                            <li class="reasons__list-item">
+                                <img src="./img/icons/reasons/sleep-svgrepo-com.svg" alt="fast food">
+                                <p class="reasons__list-item__heading">Estrés y falta de sueño</p>
+                                <p class="reasons__list-item__description">El estrés crónico y la falta de sueño 
+                                    reducen la capacidad regenerativa 
+                                    del hígado.</p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
+        <section class="benefits">
+            <div class="container">
+                <div class="benefits__description">
+                    <p class="block-heading">Liverin: Tu solución para la regeneración 
+                        y limpieza del hígado!</p>
+                    <p class="block-paragraph">Liverin está diseñado para ayudar a tu hígado a manejar las cargas diarias y mantener 
+                        su salud. Utiliza Liverin regularmente y experimenta sus beneficios</p>
+                </div>
+                <div class="benefits__content">
+                    <div class="benefits__image">
+                        <img src="./img/liverin.jpg" alt="liverin">
+                    </div>
+                    <div class="benefits__list-wrapper">
+                        <ul class="benefits__list">
+                            <li class="benefits__list-item">
+                                <div class="benefits__list-item__image">
+                                    <img src="./img/benefits/free-icon-liver-7196555.svg" alt="benefits 1">
+                                </div>
+                                <div class="benefits__list-item__description">
+                                    <p class="benefits__list-item__description-heading">Limpieza del hígado</p>
+                                    <p class="benefits__list-item__description-info">Eliminación eficaz de toxinas y sustancias nocivas 
+                                        del hígado, mejorando su estado y función</p>
+                                </div>
+                            </li>
+                            <li class="benefits__list-item">
+                                <div class="benefits__list-item__image">
+                                    <img src="./img/benefits/free-icon-liver-6326761.svg" alt="benefits 2">
+                                </div>
+                                <div class="benefits__list-item__description">
+                                    <p class="benefits__list-item__description-heading">Apoyo a la regeneración</p>
+                                    <p class="benefits__list-item__description-info">Restauración de las células hepáticas y protección contra 
+                                        daños, promoviendo su salud a largo plazo.</p>
+                                </div>
+                            </li>
+                            <li class="benefits__list-item">
+                                <div class="benefits__list-item__image">
+                                    <img src="./img/benefits/free-icon-liver-4706792.svg" alt="benefits 3">
+                                </div>
+                                <div class="benefits__list-item__description">
+                                    <p class="benefits__list-item__description-heading">Reducción de la inflamación</p>
+                                    <p class="benefits__list-item__description-info">Disminución de los procesos inflamatorios en el hígado, ayudando a aliviar molestias y dolores</p>
+                                </div>
+                            </li>
+                            <li class="benefits__list-item">
+                                <div class="benefits__list-item__image">
+                                    <img src="./img/benefits/free-icon-energy-1835596.svg" alt="benefits 4">
+                                </div>
+                                <div class="benefits__list-item__description">
+                                    <p class="benefits__list-item__description-heading">Aumento de energía</p>
+                                    <p class="benefits__list-item__description-info">Incremento de los niveles de energía y mejora del 
+                                        bienestar general gracias a un hígado saludable</p>
+                                </div>
+                            </li>
+                            <li class="benefits__list-item">
+                                <div class="benefits__list-item__image">
+                                    <img src="./img/benefits/free-icon-stomach-847190.svg" alt="benefits 5">
+                                </div>
+                                <div class="benefits__list-item__description">
+                                    <p class="benefits__list-item__description-heading">Mejora de la digestión</p>
+                                    <p class="benefits__list-item__description-info">Apoyo a los procesos digestivos y metabólicos, lo que impacta 
+                                        positivamente en el estado general del organismo</p>
+                                </div>
+                            </li>
+                            <li class="benefits__list-item">
+                                <div class="benefits__list-item__image">
+                                    <img src="./img/benefits/free-icon-hydrated-skin-10541175.svg" alt="benefits 6">
+                                </div>
+                                <div class="benefits__list-item__description">
+                                    <p class="benefits__list-item__description-heading">Piel saludable</p>
+                                    <p class="benefits__list-item__description-info">Mejora del estado de la piel, reducción de erupciones y 
+                                        picazón gracias a la limpieza del hígado</p>
+                                </div>
+                            </li>
+                            <li class="benefits__list-item">
+                                <div class="benefits__list-item__image">
+                                    <img src="./img/benefits/free-icon-protection-4359004.svg" alt="benefits 7">
+                                </div>
+                                <div class="benefits__list-item__description">
+                                    <p class="benefits__list-item__description-heading">Apoyo al sistema inmunológico</p>
+                                    <p class="benefits__list-item__description-info"> Fortalecimiento del sistema inmunológico, aumentando 
+                                        la resistencia a infecciones y enfermedades</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="benefits__offer">
+                    <p class="benefits__offer-heading">Solo hoy, descuento de hasta 60% para nuevos clientes!</p>
+                    <div class="anchor-offer">
+                        <p>Pruébalo Hoy – Ahorra hasta un 60%!</p>
+                        <div class="arrow-wrapper">
+                            <img src="./img/icons/arrow.svg" alt="arrow">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
